プログレスバー設置

--- a/game.html
+++ b/game.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+
 <script src="main.js"></script>
 <link rel ="stylesheet" href="common.css" type="text/css" />
 </head>
@@ -13,6 +15,10 @@
     <main>
         <div class="instruction">
             <div class="instruction_start">
+				<div class="progressbar">
+					<div class="bar_back"></div>
+					<div class="bar"></div>		
+				</div>
                 <div class="instruction_start_shift"><p>シフトキーを入力してください</p></div>
                 <!--<button onclick="countdown()">スタート</button>-->
             </div>
