細かな修正

--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header>
-	<h2>タイピングマラソン</h2>
+	<h2>タイピング練習ゲーム</h2>
 	</header>
     <main>
         <div class="instruction">
@@ -19,16 +19,16 @@
 					<div class="bar_back"></div>
 					<div class="bar"></div>		
 				</div>
-                <div class="instruction_start_shift"><p>シフトキーを入力してください</p></div>
+                <div class="instruction_start_shift"><p>スペースキーを入力してください</p></div>
                 <!--<button onclick="countdown()">スタート</button>-->
             </div>
             <div class="count_div">残り<b id="count">60</b>秒</div>
-			<div><b id="count_pre">3</b></div>	
+			<div class="precount_div"><b id="count_pre">3</b></div>	
         </div>
         <div>
             <p id="moji"></p>
             <form onsubmit="return false;" autocomplete="off">
-                <input type="text" id="text" autocomplete="nope"><br>
+                <input type="text" id="text" autocomplete="off"><br>
             </form>
             <p>現在<b id="point">0</b>文字入力</p>
         </div>
