--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
 	<header>
-	<h2>タイピングマラソン</h2>
+	<h2>タイピング練習ゲーム</h2>
 	</header>
 	<main>
 		<p>このサイトはあなたのタイピング能力を診断します！</p>
 		<p>表示された単語を時間内にどれだけ入力できたかで診断します。</p>
-		<p>ランキングに乗れるようにがんばりましょう！！</p>
 		<button><a href="game.html">早速始める！</a></button>
 	</main>
 	<footer></footer>
