細かな修正

--- a/game.html
+++ b/game.html
@@ -27,9 +27,10 @@
         </div>
         <div>
             <p id="moji"></p>
-            <form onsubmit="return false;" autocomplete="off">
-                <input type="text" id="text" autocomplete="off"><br>
-            </form>
+            <!-- <form id="form_text" onsubmit="return false;" autocomplete="off"　>
+                <input type="text" id="text" name="0" autocomplete="off"><br>
+            </form> -->
+            <textarea id="text" name="0" cols="15" rows="1"></textarea>
             <p>現在<b id="point">0</b>文字入力</p>
         </div>
 	<button><a href="index.html">トップに戻る</a></button>
