--- a/game.html
+++ b/game.html
@@ -21,16 +21,17 @@
 				</div>
                 <div class="instruction_start_shift"><p>スペースキーを入力してください</p></div>
                 <!--<button onclick="countdown()">スタート</button>-->
+                <div class="circle"></div>
             </div>
             <div class="count_div">残り<b id="count">60</b>秒</div>
 			<div class="precount_div"><b id="count_pre">3</b></div>	
         </div>
         <div>
             <p id="moji"></p>
-            <!-- <form id="form_text" onsubmit="return false;" autocomplete="off"　>
+            <form id="form_text" onsubmit="return false;" autocomplete="off"　>
                 <input type="text" id="text" name="0" autocomplete="off"><br>
-            </form> -->
-            <textarea id="text" name="0" cols="15" rows="1"></textarea>
+            </form>
+            <!--<textarea id="text" name="0" cols="15" rows="1"></textarea>-->
             <p>現在<b id="point">0</b>文字入力</p>
         </div>
 	<button><a href="index.html">トップに戻る</a></button>
