--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -12,8 +12,8 @@
 	</header>
 	<main>
 		<p>このサイトはあなたのタイピング能力を診断します！</p>
-		<p>表示された単語を時間内にどれだけ入力できたかで診断します。</p>
-		<button><a href="game.html">早速始める！</a></button>
+		<p></p>
+		<a href="game.html"　class="btn-index">早速始める！</a>
 	</main>
 	<footer></footer>
 	
