--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<header>
 	<h2>タイピング練習ゲーム</h2>
 	</header>
-	<main>
+	<main class="main">
 		<p>このサイトはあなたのタイピング能力を診断します！</p>
-		<p></p>
-		<a href="game.html"　class="btn-index">早速始める！</a>
+        <img src="typing.png" class="png"/>
+        <div id="btn-index"><a href="game.html" >早速始める！</a></div>
 	</main>
 	<footer></footer>
 	
