--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h2>タイピング練習ゲーム</h2>
 	</header>
 	<main class="main">
-		<p>このサイトはあなたのタイピング能力を診断します！</p>
+		<p>タイピング力鍛えませんか？</p>
         <img src="typing.png" class="png"/>
         <div id="btn-index"><a href="game.html" >早速始める！</a></div>
 	</main>
