--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="main.js"></script>
 <link rel="stylesheet" href="common.css" type="text/css"/>
+<link rel="icon" href="favicon.ico" />
 </head>
 <body>
 	<header>
