--- a/game.html
+++ b/game.html
@@ -1,12 +1,11 @@
 ﻿<!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-
-<script src="main.js"></script>
-<link rel ="stylesheet" href="common.css" type="text/css" />
+    <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="common.css" type="text/css" />
+    <link rel="icon" href="favicon.ico" />
 </head>
 <body>
 	<header>
